--- a/bookings/templates/bookings/index.html
+++ b/bookings/templates/bookings/index.html
@@ -5,7 +5,7 @@ Welcome to the Restaurant Booking System
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5 text-center">
+<div class="text-center mt-5">
     <h1 class="display-4">Welcome to the Restaurant Booking System</h1>
     <p class="lead">Book your table online and enjoy a fantastic dining experience.</p>
     <hr class="my-4">
