--- a/bookings/templates/bookings/delete_reservation.html
+++ b/bookings/templates/bookings/delete_reservation.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Delete Reservation
+{% endblock %}
+
 {% block content %}
-<div class="container mt-5 text-center">
+<div class="text-center mt-5">
     <h2 class="text-danger">Delete Reservation</h2>
     <p>Are you sure you want to delete <strong>{{ reservation.customer_name }}</strong>?</p>
-    <form method="post">
+    <form method="post" class="d-inline">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Yes, Delete</button>
-        <a href="{% url 'list_reservations' %}" class="btn btn-secondary">Cancel</a>
     </form>
+    <a href="{% url 'list_reservations' %}" class="btn btn-secondary">Cancel</a>
 </div>
 {% endblock %}
