--- a/bookings/templates/bookings/list_reservations.html
+++ b/bookings/templates/bookings/list_reservations.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Reservations
+{% endblock %}
+
 {% block content %}
-<div class="container mt-5">
-    <h2>Reservations</h2>
-    <table class="table table-striped mt-3">
-        <thead>
+<div class="mt-5">
+    <h2 class="mb-4">Reservations</h2>
+    <table class="table table-hover">
+        <thead class="table-dark">
             <tr>
                 <th>#</th>
                 <th>Name</th>
@@ -31,7 +35,7 @@
             </tr>
             {% empty %}
             <tr>
-                <td colspan="7">No reservations yet.</td>
+                <td colspan="7" class="text-center">No reservations yet.</td>
             </tr>
             {% endfor %}
         </tbody>
