--- a/bookings/templates/bookings/register.html
+++ b/bookings/templates/bookings/register.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Register</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container" style="max-width: 400px; margin-top: 50px;">
-        <h2 class="text-center">Register</h2>
+{% extends 'base.html' %}
+
+{% block title %}
+Register
+{% endblock %}
+
+{% block content %}
+<div class="card mt-5 mx-auto" style="max-width: 400px;">
+    <div class="card-body">
+        <h2 class="card-title text-center">Register</h2>
         <form method="post">
             {% csrf_token %}
-            <div class="mb-3">
-                {{ form.as_p }}
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Register</button>
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary mt-3 w-100">Register</button>
         </form>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
