--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
-        </div>
+        </div>s
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
     <div class="text-center mt-3">
