--- a/templates/base.html
+++ b/templates/base.html
@@ -42,23 +42,15 @@
         </div>
     </nav>
 
-    <div class="hero-section text-center">
-        <div class="hero-content">
-            <h1>Welcome to Cucina Romana</h1>
-            <p>Experience the flavors of Italy with authentic cuisine and a cozy atmosphere.</p>
-            <a href="{% url 'list_reservations' %}" class="btn btn-danger btn-lg">View Reservations</a>
-            <a href="{% url 'register' %}" class="btn btn-secondary btn-lg ms-2">Register Now</a>
-        </div>
-    </div>
-
-    <hr class="decorative-divider">
+    {% block hero %}
+    {% endblock %}
 
     <div class="container mt-4">
         {% block content %}
         {% endblock %}
     </div>
 
-    <footer class="footer text-center">
+    <footer class="footer text-center mt-5 py-3">
         <p>&copy; 2024 Cucina Romana</p>
         <div class="social-media-links">
             <a href="#"><img src="{% static 'img/facebook-icon.png' %}" alt="Facebook"></a>
@@ -71,5 +63,6 @@
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
+
 
 
