--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,14 +31,15 @@ body {
 
 /* HERO SECTION */
 .hero-section {
-    height: 100vh;
-    background: url("../img/roman-hero.jpg") no-repeat center center/cover;
+    height: 70vh;
+    background: url("../img/roman-hero.jpg") no-repeat center center;
+    background-size: contain;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #fff;
-    text-align: center;
+    padding: 2rem;
 }
 
 .hero-content {
