--- a/bookings/templates/bookings/create_reservation.html
+++ b/bookings/templates/bookings/create_reservation.html
@@ -5,14 +5,15 @@ Create a Reservation
 {% endblock %}
 
 {% block content %}
-<div class="card mt-5 mx-auto" style="max-width: 600px;">
+<div class="card mt-5 mx-auto" style="max-width: 600px; background: rgba(255, 255, 255, 0.9); box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);">
     <div class="card-body">
-        <h2 class="card-title text-center">Create a Reservation</h2>
+        <h2 class="card-title text-center" style="font-family: 'Georgia', serif;">Create a Reservation</h2>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary mt-3 w-100">Submit</button>
+            <button type="submit" class="btn btn-danger mt-3 w-100">Submit</button>
         </form>
     </div>
 </div>
 {% endblock %}
+
