--- a/bookings/templates/bookings/register.html
+++ b/bookings/templates/bookings/register.html
@@ -5,14 +5,15 @@ Register
 {% endblock %}
 
 {% block content %}
-<div class="card mt-5 mx-auto" style="max-width: 400px;">
+<div class="card mt-5 mx-auto" style="max-width: 400px; background: rgba(255, 255, 255, 0.9); box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);">
     <div class="card-body">
-        <h2 class="card-title text-center">Register</h2>
+        <h2 class="card-title text-center" style="font-family: 'Georgia', serif;">Register</h2>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary mt-3 w-100">Register</button>
+            <button type="submit" class="btn btn-danger mt-3 w-100">Register</button>
         </form>
     </div>
 </div>
 {% endblock %}
+
