Add new menu page URL, view function, and link in navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
                         <a class="nav-link" href="{% url 'list_reservations' %}">Reservations</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'menu' %}">Menu</a> <!-- Added Menu Link -->
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %}">Register</a>
                     </li>
                 </ul>
@@ -63,6 +66,7 @@
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
+
 
 
 
