--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -7,6 +7,21 @@ Menu - Cucina Romana
 {% block content %}
 <div class="container mt-5">
     <h2 class="text-center display-5 mb-4">Our Menu</h2>
-    
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Antipasti</h3>
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Bruschetta <span>€6.00</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Caprese Salad <span>€8.50</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Prosciutto e Melone <span>€9.00</span>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
 {% endblock %}
