Add Secondi Piatti section with dishes and prices to menu.html

--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -21,7 +21,20 @@ Menu - Cucina Romana
                     Prosciutto e Melone <span>€9.00</span>
                 </li>
             </ul>
+            <h3>Secondi Piatti</h3>
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                Saltimbocca alla Romana <span>€16.50</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                Pollo alla Cacciatora <span>€15.00</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                Bistecca Fiorentina <span>€22.00</span>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
+
 {% endblock %}
