managed code structure in menu.html

--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -8,7 +8,7 @@ Menu - Cucina Romana
 <div class="container mt-5">
     <h2 class="text-center display-5 mb-4">Our Menu</h2>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <h3>Antipasti</h3>
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -21,32 +21,35 @@ Menu - Cucina Romana
                     Prosciutto e Melone <span>€9.00</span>
                 </li>
             </ul>
+        </div>
+        <div class="col-md-4">
             <h3>Secondi Piatti</h3>
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                Saltimbocca alla Romana <span>€16.50</span>
+                    Saltimbocca alla Romana <span>€16.50</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                Pollo alla Cacciatora <span>€15.00</span>
+                    Pollo alla Cacciatora <span>€15.00</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                Bistecca Fiorentina <span>€22.00</span>
+                    Bistecca Fiorentina <span>€22.00</span>
                 </li>
             </ul>
+        </div>
+        <div class="col-md-4">
             <h3>Dolci</h3>
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-            Tiramisu <span>€6.50</span>
+                    Tiramisu <span>€6.50</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-            Panna Cotta <span>€5.00</span>
+                    Panna Cotta <span>€5.00</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-            Gelato <span>€4.50</span>
+                    Gelato <span>€4.50</span>
                 </li>
             </ul>
         </div>
     </div>
 </div>
-
 {% endblock %}
