Update menu.html to use section-level images instead of individual dish images

--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -10,10 +10,10 @@ Menu - Cucina Romana
     <h2 class="text-center display-5 mb-4">Our Menu</h2>
     <div class="row">
         <!-- Antipasti -->
-        <div class="col-md-6">
+        <div class="col-md-6 mb-4">
             <h3>Antipasti</h3>
-            <img src="{% static 'img/bruschetta.jpg' %}" alt="Bruschetta" class="img-fluid rounded mb-3">
-            <ul class="list-group mb-4">
+            <img src="{% static 'img/antipasti.jpg' %}" alt="Antipasti" class="img-fluid rounded mb-3">
+            <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Bruschetta <span>€6.00</span>
                 </li>
@@ -25,12 +25,12 @@ Menu - Cucina Romana
                 </li>
             </ul>
         </div>
-        
+
         <!-- Primi Piatti -->
-        <div class="col-md-6">
+        <div class="col-md-6 mb-4">
             <h3>Primi Piatti</h3>
-            <img src="{% static 'img/carbonara.jpg' %}" alt="Spaghetti alla Carbonara" class="img-fluid rounded mb-3">
-            <ul class="list-group mb-4">
+            <img src="{% static 'img/primi_piatti.jpg' %}" alt="Primi Piatti" class="img-fluid rounded mb-3">
+            <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Spaghetti alla Carbonara <span>€12.00</span>
                 </li>
@@ -44,12 +44,12 @@ Menu - Cucina Romana
         </div>
     </div>
 
+    <!-- Secondi Piatti -->
     <div class="row mt-4">
-        <!-- Secondi Piatti -->
-        <div class="col-md-6">
+        <div class="col-md-6 mb-4">
             <h3>Secondi Piatti</h3>
-            <img src="{% static 'img/saltimbocca.jpg' %}" alt="Saltimbocca alla Romana" class="img-fluid rounded mb-3">
-            <ul class="list-group mb-4">
+            <img src="{% static 'img/secondi_piatti.jpg' %}" alt="Secondi Piatti" class="img-fluid rounded mb-3">
+            <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Saltimbocca alla Romana <span>€16.50</span>
                 </li>
@@ -61,12 +61,12 @@ Menu - Cucina Romana
                 </li>
             </ul>
         </div>
-        
+
         <!-- Dolci -->
-        <div class="col-md-6">
+        <div class="col-md-6 mb-4">
             <h3>Dolci</h3>
-            <img src="{% static 'img/tiramisu.jpg' %}" alt="Tiramisu" class="img-fluid rounded mb-3">
-            <ul class="list-group mb-4">
+            <img src="{% static 'img/dolci.jpg' %}" alt="Dolci" class="img-fluid rounded mb-3">
+            <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Tiramisu <span>€6.50</span>
                 </li>
