--- a/templates/base.html
+++ b/templates/base.html
@@ -56,9 +56,9 @@
     <footer class="footer text-center mt-5 py-3">
         <p>&copy; 2024 Cucina Romana</p>
         <div class="social-media-links">
-            <a href="#"><img src="{% static 'img/facebook-icon.png' %}" alt="Facebook"></a>
-            <a href="#"><img src="{% static 'img/instagram-icon.png' %}" alt="Instagram"></a>
-            <a href="#"><img src="{% static 'img/twitter-icon.png' %}" alt="Twitter"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="{% static 'img/facebook-icon.png' %}" alt="Facebook" class="social-icon"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="{% static 'img/instagram-icon.png' %}" alt="Instagram" class="social-icon"></a>
+            <a href="https://www.x.com" target="_blank"><img src="{% static 'img/x-icon.png' %}" alt="X" class="social-icon"></a>
         </div>
     </footer>
 
@@ -66,7 +66,5 @@
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
-
-
 
 
